data/derived/comb/progs/unify/prog4757.ml.out
Characters 59-60:
  wwhile(f, x);;
            ^
Error: This expression has type int but an expression was expected of type
         'a -> 'a
